# SPR1D-Game

./: CMakeLists.txt  bots.c  filemanagement.c  main.c  scrematura.c  structures.c
files/filenames/: filenames.txt
files/impiccato_phrases/: default.txt
four_players_games/: impiccato.c  ponte_vetro.c
headers/: biglie.h  blackjack.h  bots.h  dadi.h  filemanagement.h  impiccato.h  morracinese.h  murra.h  paridispari.h  ponte_vetro.h  scrematura.h  structures.h  tris.h
portable_utils/: colors.c  colors.h  utils.c  utils.h
two_players_games/: biglie.c  blackjack.c  dadi.c  morracinese.c  murra.c  paridispari.c  tris.c
